# aind-foraging-behavior-bonsai-automatic-training

./: .gitignore  README.md  debug_automatic_training.ipynb  pyproject.toml
.github/workflows/: action.yml
code/: TrainingStagePar.json  auto_training.py  copy_database_to_public.py  curriculum.py  curriculum_Coupled Baiting_0.1.json  debug_automatic_training.ipynb  run_capsule.py  schema_training.py  training_progress_tracker.py
code/aind_auto_train/: __init__.py  auto_train_manager.py  curriculum_manager.py  demo_auto_train_manager.ipynb  demo_curriculum_manager.ipynb  demo_manager.ipynb  demo_schema.ipynb
code/aind_auto_train/curriculums/: Coupled Baiting_curriculum_v0.1_schema_v0.2.json  Coupled Baiting_curriculum_v0.1_schema_v0.2_paras  Coupled Baiting_curriculum_v0.1_schema_v0.2_rules  Coupled Baiting_curriculum_v0.1_schema_v0.3.json  Coupled Baiting_curriculum_v0.1_schema_v0.3_paras  Coupled Baiting_curriculum_v0.1_schema_v0.3_rules  Coupled Baiting_v1.0_curriculum_v0.1_schema_v0.1.json  Coupled Baiting_v1.0_curriculum_v0.1_schema_v0.1_paras  Coupled Baiting_v1.0_curriculum_v0.1_schema_v0.1_rules  DynamicForagingCurriculum_v0.2.json  DynamicForagingCurriculum_v0.3.json  DynamicForagingCurriculum_v1.0.json  Uncoupled Baiting_curriculum_v1.0_schema_v1.0.json  Uncoupled Baiting_curriculum_v1.0_schema_v1.0_paras  Uncoupled Baiting_curriculum_v1.0_schema_v1.0_rules  coupled_baiting.py  coupled_baiting_0.2.py  coupled_baiting_0p1.py  coupled_baiting_0p2.py  coupled_baiting_1p0.py  coupled_baiting_1p1.py  coupled_baiting_2p0.py  coupled_baiting_2p1.py  coupled_baiting_2p2.py  coupled_baiting_2p3.py  curriculum_Coupled Baiting_0.1_1.0.json  dummy_task.py  dummy_task_0p2.py  uncoupled_baiting_0p1.py  uncoupled_baiting_1p0.py  uncoupled_baiting_2p0.py  uncoupled_baiting_2p1.py  uncoupled_baiting_2p2.py  uncoupled_baiting_2p3.py  uncoupled_no_baiting_0p1.py  uncoupled_no_baiting_1p0.py  (+10 more)
code/aind_auto_training/: __init__.py  curriculum_manager.py  demo_manager.ipynb  demo_schema.ipynb
code/dynamic_foraging_curriculum/: __init__.py  automation.py  coupled_baiting.py  curriculum_Coupled Baiting_0.1.json  curriculum_manager.py  debug_automatic_training.ipynb  demo.ipynb  demo_manager.ipynb  demo_schema.ipynb  training_progress_tracker.py
environment/: Dockerfile  environment.yml  postInstall
metadata/: metadata.yml
(+20 files in other folders)
