[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic-foraging-curriculum"
description = "Automatic Curriculum for Dynamic Foraging Task used at the Allen Institute for Neural Dynamics"
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
readme = "README.md"

dynamic = ["version"]

dependencies = [
    'aind-data-schema==0.15.25',
    'awscli==1.29.79',
]

[tool.setuptools.packages.find]
where = ["code"]

[tool.setuptools.dynamic]
version = {attr = "dynamic_foraging_curriculum.__version__"}