[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aind-auto-train"
description = "Automatic Training for Behavioral Tasks used at the Allen Institute for Neural Dynamics"
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
readme = "README.md"

dynamic = ["version"]

dependencies = [
    'aind-data-schema==0.15.25',
    'pandas',
    'plotly',
    'boto3',
    'graphviz'
]

[tool.setuptools.packages.find]
where = ["code"]

[tool.setuptools.dynamic]
version = {attr = "aind_auto_train.__version__"}